feat: implementa validaçao e swagger, teste ok

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,6 +11,9 @@ spring:
 
 h2:
   console:
-    enabled: true
     path: /h2-console
+    enabled: true
 
+springdoc:
+  swagger-ui:
+    path: /public/swagger
